Fix prediction output variable and HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head><title>Heart Disease Prediction</title></head>
+<head>
+    <title>Heart Disease Prediction</title>
+</head>
 <body>
     <h2>Heart Disease Prediction</h2>
     <form action="/predict" method="post">
-        <input type="text" name="age" placeholder="age"><br>
-<input type="text" name="sex" placeholder="sex"><br>
-<input type="text" name="cp" placeholder="cp"><br>
-<input type="text" name="trestbps" placeholder="trestbps"><br>
-<input type="text" name="chol" placeholder="chol"><br>
-<input type="text" name="fbs" placeholder="fbs"><br>
-<input type="text" name="restecg" placeholder="restecg"><br>
-<input type="text" name="thalach" placeholder="thalach"><br>
-<input type="text" name="exang" placeholder="exang"><br>
-<input type="text" name="oldpeak" placeholder="oldpeak"><br>
-<input type="text" name="slope" placeholder="slope"><br>
-<input type="text" name="ca" placeholder="ca"><br>
-<input type="text" name="thal" placeholder="thal"><br>
+        <input type="text" name="age" placeholder="Age"><br>
+        <input type="text" name="sex" placeholder="Sex (1=Male, 0=Female)"><br>
+        <input type="text" name="cp" placeholder="Chest Pain Type (0-3)"><br>
+        <input type="text" name="trestbps" placeholder="Resting Blood Pressure"><br>
+        <input type="text" name="chol" placeholder="Cholesterol"><br>
+        <input type="text" name="fbs" placeholder="Fasting Blood Sugar (0 or 1)"><br>
+        <input type="text" name="restecg" placeholder="Resting ECG (0-2)"><br>
+        <input type="text" name="thalach" placeholder="Max Heart Rate Achieved"><br>
+        <input type="text" name="exang" placeholder="Exercise Induced Angina (0 or 1)"><br>
+        <input type="text" name="oldpeak" placeholder="ST Depression"><br>
+        <input type="text" name="slope" placeholder="Slope (0-2)"><br>
+        <input type="text" name="ca" placeholder="Major Vessels (0-3)"><br>
+        <input type="text" name="thal" placeholder="Thalassemia (0-2)"><br>
         <input type="submit" value="Predict">
     </form>
-    <h3>{ prediction_text }</h3>
+
+    {% if prediction %}
+        <h3>Result: {{ prediction }}</h3>
+    {% endif %}
 </body>
 </html>
